--- a/ASSETS/indexCSSstyle.css
+++ b/ASSETS/indexCSSstyle.css
@@ -1,41 +1,152 @@
-/*CSS style sheet for index.html*/
-.body {
-  background-color: black;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.welcome {
-  position: absolute;
-  top: 130%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 18px;
-  width: 100%;
-  font-family: "Courier New", Courier, monospace;
-  font-family: "Courier New", Courier, monospace;
-  color: rgb(255, 255, 255);
+body {
+  background-color: #1c1b1df5;
 }
 
-.center {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 40px;
-  font-family: "Courier New", Courier, monospace;
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 1px;
-  text-rendering: geometricPrecision;
-}
-.blurred {
-  height: auto;
+.header {
+  padding: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #00000000;
+  color: #000000;
   width: 100%;
-  margin-bottom: 0px;
-  background-size: inherit;
+}
+
+.header ul li {
+  display: inline-block;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.header h1 {
+  display: inline-block;
+  font-size: 100px;
+  text-emphasis: bold;
+}
+
+.header h1 .seo {
+  color: #d9dcd6;
+}
+
+.header {
+  padding-top: 15px;
+  float: right;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 20px;
+}
+
+.header ul {
+  list-style-type: none;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+}
+
+.hero {
+  height: 800px;
+  width: 100%;
+  margin-bottom: 25px;
+  background-image: url("../ASSETS/port_photo/November_2011.jpg");
+  background-size: cover;
   background-position: center;
 }
 
-.btn {
-  background-color: rgb(0, 0, 0);
-  border-color: black;
-  padding-bottom: 250px;
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
+}
+
+.About-Me {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  width: 100%;
+  border-radius: 90px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #0000009c;
+  color: #ffffff;
+}
+
+.Portfolio {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 500px;
+  width: 100%;
+  border-radius: 90px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #0000009c;
+  color: #ffffff;
+}
+
+.Contact-Me {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  width: 100%;
+  border-radius: 90px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #0000009c;
+  color: #ffffff;
+}
+
+.About-Me img {
+  max-height: 200px;
+}
+
+.Contact-Me img {
+  max-height: 200px;
+}
+
+.gameBuzz {
+}
+
+.weatherApp {
+}
+
+.About-Me h2 {
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+
+.Portfolio h2 {
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+
+.Contact-Me h2 {
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+
+.footer {
+  padding: 30px;
+  clear: both;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+
+  text-align: center;
+}
+
+.footer h2 {
+  font-size: 20px;
 }
